Fix container-fluid spacing

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -11,3 +11,9 @@ html.menu-is-open {
 .container-fluid {
   max-width: 2000px;
 }
+
+@include media-breakpoint-up(md) {
+  .container-fluid {
+    padding: 0 2rem;
+  }
+}
