--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -5,6 +5,7 @@
     list-style-type: none;
     padding: 0;
     margin: 0;
+    margin-left: .25rem;
   }
 
   &-nav {
@@ -15,6 +16,7 @@
 
   &-brand {
     padding: 0;
+    margin-left: -.4375rem;
 
     .brand-logo {
       display: inline-block;
@@ -58,7 +60,6 @@
     .navbar-brand {
       color: $gray-800;
       width: 13rem;
-      margin-left: 10px;
     }
   }
 
@@ -127,7 +128,6 @@
   right: 0;
   top: 0;
   z-index: 2000;
-  padding: 1rem;
   padding-top: 5rem;
   transition: .5s ease-in;
   overflow-y: scroll;
@@ -247,6 +247,11 @@
       margin: 0 1rem !important;
       border-left: 1px $gray-500 solid;
       border-right: 1px $gray-500 solid;
+    }
+
+    .container-fluid {
+      padding-left: 2rem;
+      padding-right: 2rem;
     }
   }
 }
