--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -4,7 +4,7 @@
   background: $gray-500;
   background-size: cover;
   background-position: center;
-  padding: 6rem 1rem;
+  padding: 6rem 0;
 
   &-claim {
     svg {
